closing feature #1381 Now, each directory fragment (one per user) is totally customizable with StringTemplate.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2967 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/directory/settings/DirectorySettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/settings/DirectorySettings.properties
@@ -6,3 +6,6 @@ ELEMENTS_PER_PAGE=20
 homePhone=false
 fax=false
 cellularPhone=false
+
+templatePath = C:\\SilverpeasV5\\silverpeas\\resources\\StringTemplates\\directory
+customersTemplatePath = C:\\SilverpeasV5\\silverpeas\\data\\resources\\StringTemplates\\directory
