--- a/pom.xml
+++ b/pom.xml
@@ -60,14 +60,6 @@
       </snapshots>
     </repository>
   </repositories>
-  
-  <pluginRepositories>
-    <pluginRepository>
-      <id>apache.snapshots</id>
-      <url>http://repository.apache.org/snapshots/</url>
-    </pluginRepository>
-  </pluginRepositories>
-
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
@@ -121,7 +113,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.0-beta-3-SNAPSHOT</version>
+        <version>3.0-beta-3</version>
         <configuration>
           <reportPlugins>
             <plugin>
