--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
