Closing support #222 : Removing datasource from java: namespace
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3115 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
@@ -115,22 +115,22 @@ USE_CATALOG_EJB			= java:comp/env/useCatalogEJB
 SECURITY_ADAPTER_CLASSNAME	= java:comp/env/securityAdapterClassName
 SEND_CONFIRMATION_MAIL		= java:comp/env/sendConfirmationMail
 
-ATTACHMENT_DATASOURCE		= java:/Silverpeas
-CONTAINERMANAGER_DATASOURCE	= java:/Silverpeas
-CONTENTMANAGER_DATASOURCE	= java:/Silverpeas
-CLASSIFYENGINE_DATASOURCE	= java:/Silverpeas
-PDC_DATASOURCE			= java:/Silverpeas
-ADMIN_DATASOURCE		= java:/Silverpeas
-FORMTEMPLATE_DATASOURCE		= java:/Silverpeas
-WORKFLOW_DATASOURCE		= java:/Silverpeas
-CHAT_DATASOURCE			= java:/Silverpeas
-INFOLETTER_DATASOURCE		= java:/Silverpeas
-OUTLOOK_DATASOURCE		= java:/Silverpeas
-GENERATOR_DATASOURCE		= java:/Silverpeas
-FORMDESIGNER_DB_DATASOURCE	= java:/Silverpeas
-DATABASE_DATASOURCE		= java:/Silverpeas
-PERSISTENCE_DB_DATASOURCE	= java:/Silverpeas
-WIKI_DATASOURCE			= java:/Silverpeas
+ATTACHMENT_DATASOURCE		= Silverpeas
+CONTAINERMANAGER_DATASOURCE	= Silverpeas
+CONTENTMANAGER_DATASOURCE	= Silverpeas
+CLASSIFYENGINE_DATASOURCE	= Silverpeas
+PDC_DATASOURCE			= Silverpeas
+ADMIN_DATASOURCE		= Silverpeas
+FORMTEMPLATE_DATASOURCE		= Silverpeas
+WORKFLOW_DATASOURCE		= Silverpeas
+CHAT_DATASOURCE			= Silverpeas
+INFOLETTER_DATASOURCE		= Silverpeas
+OUTLOOK_DATASOURCE		= Silverpeas
+GENERATOR_DATASOURCE		= Silverpeas
+FORMDESIGNER_DB_DATASOURCE	= Silverpeas
+DATABASE_DATASOURCE		= Silverpeas
+PERSISTENCE_DB_DATASOURCE	= Silverpeas
+WIKI_DATASOURCE			= Silverpeas
 
 JMS_HEADER_CHANNEL		= CHANNEL
 
