--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
@@ -28,5 +28,4 @@ SMTPPort = 587
 SMTPServer = smtp-msa.orange.fr
 SMTPDebug = false
 SMTPSecure = false
-NotificationAddress = silverpeas@silverpeas.com
-AuthorizedDomains=silverpeas.net,silverpeas.org,silverpeas.com,oeovo.com,oosphere.com,oosphere.ch
+NotificationAddress=silverpeas@silverpeas.com
