Closing feature #1201 : if sender email is not in specified domains, use generic email address
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3142 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/channels/pom.xml
+++ b/ejb-core/channels/pom.xml
@@ -12,7 +12,15 @@
   <packaging>ejb</packaging>
   <name>EJB Notification Channels</name>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>com.silverpeas.core</groupId>
+      <artifactId>lib-core</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
       <plugin>
