--- a/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
@@ -21,6 +21,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+# Mapping des Profiles par défaut des espaces (admin, publisher, writer, reader)  -> vers les Profiles du composant définis dans le xmlComponents (exemple pour Almanach : admin, publisher et user)
+
 almanach_admin = admin
 almanach_publisher = publisher
 almanach_writer = publisher
@@ -38,26 +41,45 @@ bookmark_reader = Reader
 
 chat_admin = admin
 chat_publisher = publisher
-chat_writer = user
+chat_writer = publisher
 chat_reader = user
-
-connecteurJDBC_admin = admin
-connecteurJDBC_publisher = publisher
-connecteurJDBC_writer = user
-connecteurJDBC_reader = user
 
 classifieds_admin = admin
 classifieds_publisher = publisher
+classifieds_writer = publisher
+classifieds_reader = publisher
 
-formManager_admin = Administrator
-formManager_publisher = Designer
-formManager_writer = SenderReceiver
-formManager_reader = SenderReceiver
+connecteurJDBC_admin = admin
+connecteurJDBC_publisher = publisher
+connecteurJDBC_writer = publisher
+connecteurJDBC_reader = user
+
+# Spécifique HCL
+consultations_admin = admin
+consultations_publisher = user
+consultations_writer = user
+consultations_reader = user
+
+dataWarning_admin = admin
+dataWarning_publisher = publisher
+dataWarning_writer = publisher
+dataWarning_reader = user
+
+# Workflow
+demandeCongesSimple_admin = supervisor
+demandeCongesSimple_publisher = Responsable
+demandeCongesSimple_writer = Employe
+demandeCongesSimple_reader = Employe
+
+formsOnline_admin = Administrator
+formsOnline_publisher = SenderReceiver
+formsOnline_writer = SenderReceiver
+formsOnline_reader = SenderReceiver
 
 forums_admin = admin
 forums_publisher = user
 forums_writer = user
-forums_reader = user
+forums_reader = reader
 
 gallery_admin = admin
 gallery_publisher = publisher
@@ -84,14 +106,33 @@ kmelia_publisher = publisher
 kmelia_writer = writer
 kmelia_reader = user
 
+# Spécifique ADEF
+kmeliaPlus_admin = admin
+kmeliaPlus_publisher = publisher
+kmeliaPlus_writer = writer
+kmeliaPlus_reader = user
+
+# Spécifique ENE et INPI et UNOCAM
+look_admin = admin
+look_publisher = publisher
+look_writer = publisher
+look_reader = user
+
 mailinglist_admin = admin
 mailinglist_publisher = moderator
 mailinglist_writer = reader
 mailinglist_reader = reader
 
+# Spécifique Mesureo
+mesureo_admin = admin
+mesureo_publisher = accountmanager
+mesureo_writer = accountmanager
+mesureo_reader = client
+
 myDB_admin = admin
 myDB_publisher = publisher
-myDB_user = user
+myDB_writer = publisher
+myDB_reader = user
 
 newsEdito_admin = admin
 newsEdito_publisher = publisher
@@ -100,7 +141,8 @@ newsEdito_reader = user
 
 organizationchart_admin = admin
 organizationchart_publisher = publisher
-organizationchart_user = user
+organizationchart_writer = publisher
+organizationchart_reader = user
 
 outlook_admin = admin
 outlook_publisher = user
@@ -132,9 +174,45 @@ quizz_publisher = publisher
 quizz_writer = publisher
 quizz_reader = user
 
+# Workflow Spécifique REED
+REEDdemandeContratTravail_admin = supervisor
+REEDdemandeContratTravail_publisher = dirRH
+REEDdemandeContratTravail_writer = equipeRH
+REEDdemandeContratTravail_reader = demandeur
+
+# Workflow Spécifique REED
+REEDdemandeModifContratTravail_admin = supervisor
+REEDdemandeModifContratTravail_publisher = dirRH
+REEDdemandeModifContratTravail_writer = equipeRH
+REEDdemandeModifContratTravail_reader = demandeur
+
+# Workflow Spécifique REED
+REEDdemandeOuverturePoste_admin = supervisor
+REEDdemandeOuverturePoste_publisher = dirRH
+REEDdemandeOuverturePoste_writer = equipeRH
+REEDdemandeOuverturePoste_reader = demandeur
+
+# Workflow Spécifique REED
+REEDdemandeOuverturePosteInterimaire_admin = supervisor
+REEDdemandeOuverturePosteInterimaire_publisher = dirRH
+REEDdemandeOuverturePosteInterimaire_writer = equipeRH
+REEDdemandeOuverturePosteInterimaire_reader = demandeur
+
+# Workflow Spécifique REED
+REEDdemandeOuverturePosteStagiaire_admin = supervisor
+REEDdemandeOuverturePosteStagiaire_publisher = compta
+REEDdemandeOuverturePosteStagiaire_writer = achat
+REEDdemandeOuverturePosteStagiaire_reader = demandeur
+
+# Workflow Spécifique REED
+REEDfournisseurs_admin = supervisor
+REEDfournisseurs_publisher = dirRH
+REEDfournisseurs_writer = equipeRH
+REEDfournisseurs_reader = demandeur
+
 resourcesManager_admin = admin
-resourcesManager_publisher = admin
-resourcesManager_writer = publisher
+resourcesManager_publisher = responsable
+resourcesManager_writer = responsable
 resourcesManager_reader = publisher
 
 rssAgregator_admin = admin
@@ -147,20 +225,27 @@ silverCrawler_publisher = user
 silverCrawler_writer = user
 silverCrawler_reader = user
 
+# Spécifique FNMJ
+statGanesha_admin = fnmj
+statGanesha_publisher = responsable
+statGanesha_writer = responsableMag
+statGanesha_reader = formateur
+
 survey_admin = admin
 survey_publisher = publisher
-survey_writer = publisher
-survey_reader = userClassic
-
-taskm_admin = chefProject
-taskm_publisher = resource
-taskm_writer = resource
-taskm_reader = user
+survey_writer = userMultiple
+survey_reader = user
 
 toolbox_admin = admin
 toolbox_publisher = publisher
 toolbox_writer = publisher
 toolbox_reader = user
+
+# Workflow Spécifique INPI
+validationReponses_admin = supervisor
+validationReponses_publisher = CD
+validationReponses_writer = Redacteur
+validationReponses_reader = Archiviste
 
 webPages_admin = publisher
 webPages_publisher = publisher
@@ -172,15 +257,15 @@ webSites_publisher = Publisher
 webSites_writer = Publisher
 webSites_reader = Reader
 
-wiki_admin = admin
-wiki_publisher = writer
-wiki_writer = writer
-wiki_reader = user
-
 whitePages_admin = admin
 whitePages_publisher = admin
 whitePages_writer = admin
 whitePages_reader = user
+
+wiki_admin = admin
+wiki_publisher = writer
+wiki_writer = writer
+wiki_reader = user
 
 yellowpages_admin = admin
 yellowpages_publisher = publisher
