update feature #407, #408, #409, #410 Merge statistics features from core-5.2-SPEC-1-SNAPSHOT branche
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3162 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle.properties
@@ -92,10 +92,19 @@ silverStatisticsPeas.In	 	 	 	 = en
 silverStatisticsPeas.Display	 	 	 = Affichage
 silverStatisticsPeas.Volumes	 	 	 = Volumes
 
+silverStatisticsPeas.exportOptions	= Format d'exportation
+silverStatisticsPeas.export.option.csv=CSV
 
+silverStatisticsPeas.access.space = Acc\u00E8s aux espaces
+silverStatisticsPeas.access.pdc = Acc\u00E8s par le plan de classement
 
+silverStatisticsPeas.pdc.axis= Statistiques par axes
+silverStatisticsPeas.pdc.cross= Statistiques crois\u00E9es
 
-
-
-
-
+silverStatisticsPeas.pdc.th.axis= Axe
+silverStatisticsPeas.pdc.th.access= Nombre d'acc\u00E8s
+silverStatisticsPeas.pdc.cross.axis.first=Premier axe
+silverStatisticsPeas.pdc.cross.axis.second=Second axe
+silverStatisticsPeas.pdc.cross.select=S\u00E9lectionner un axe
+silverStatisticsPeas.pdc.error.select=Veuillez s\u00E9lectionner deux axes.
+silverStatisticsPeas.pdc.error.same=Vous devez s\u00E9lectionner deux diff\u00E9rents axes.
