--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
@@ -35,3 +35,6 @@ GEF.progressMessage.message1 = Traitement en cours
 GEF.progressMessage.message2 = Merci de bien vouloir patienter...
 
 GEF.operations.label = Que voulez-vous faire ?
+
+GEF.export.label = Format d'exportation
+GEF.export.option.csv=CSV
