Switch to the 3.0.5 version of the Spring Framework in order to profit in the future of the new Spring capabilities in order to leverage Silverpeas development
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3179 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/versioning/pom.xml
+++ b/ejb-core/versioning/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>ejb-core</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
-	
+
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>versioning</artifactId>
   <packaging>ejb</packaging>
@@ -53,6 +53,18 @@
     <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
+    </dependency>
+    <dependency>
+      <artifactId>spring-modules-jcr</artifactId>
+      <groupId>org.springmodules</groupId>
+      <type>jar</type>
+      <version>0.8a</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>spring</artifactId>
+          <groupId>org.springframework</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
