--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>core</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
-	
+
   <groupId>com.silverpeas.core</groupId>
   <artifactId>test-core</artifactId>
   <packaging>jar</packaging>
   <name>Test Core</name>
-	
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -45,7 +45,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring</artifactId>
+      <artifactId>spring-orm</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
