Refactor the it-test-core module to be dedicated to integration tests. In fact, it is aiming to gather both the integration tests and the long-running tests. Now the integration tests run with the maven profile ci; this profile is used by hudson and it is unset by default
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3207 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/versioning/pom.xml
+++ b/ejb-core/versioning/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>${project.parent.groupId}</groupId>
-      <artifactId>it-test-core</artifactId>
+      <artifactId>test-core</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
