fixing bug #1351 Now, space allows absolute and relative URLs.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3248 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -143,3 +143,5 @@ JSPP.BinDelete = Supprimer définitivement
 JSPP.BinEmpty = La corbeille est vide !
 JSPP.BinDeleteConfirm = Etes-vous sûr(e) de vouloir supprimer définitivement cet élément et tout ce qu'il contient ?
 JSPP.BinDeleteConfirmSelected = Etes-vous sûr(e) de vouloir supprimer définitivement les éléments sélectionnés et tout ce qu'ils contiennent ?
+
+JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas préciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
