--- a/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
@@ -69,3 +69,6 @@ pathInstallerJre = http://java.sun.com/update/1.5.0/jinstall-1_5_0_11-windows-i5
 httpServerBase =
 
 charset=UTF-8
+
+avatar.property = login
+avatar.extension = jpg
