Related to feature #1485, adding commons-beanutils.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3267 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -84,6 +84,10 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+	<dependency>
+	  <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+	</dependency>
     <dependency>
       <groupId>net.sourceforge</groupId>
       <artifactId>cryptolib</artifactId>
@@ -175,6 +179,10 @@
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-spellchecker</artifactId>
     </dependency>
+    <!--<dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-snowball</artifactId>
+    </dependency>-->
     <dependency>
       <groupId>org.jdom</groupId>
       <artifactId>jdom</artifactId>
