--- a/config-core/src/main/filters/filter.properties
+++ b/config-core/src/main/filters/filter.properties
@@ -21,4 +21,4 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JBOSS_HOME=C:/Silverpeas/KMEdition/Tools/jboss403
+#JBOSS_HOME=C:/Silverpeas/KMEdition/Tools/jboss403
