--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -43,6 +43,10 @@ user.displayer = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
 user.displayer.user = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
 user.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
 
+multipleUser.implementation = com.silverpeas.form.fieldType.MultipleUserField
+multipleUser.displayer = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
+multipleUser.displayer.multipleUser = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
+
 pdcUser.implementation = com.silverpeas.form.fieldType.PdcUserField
 pdcUser.displayer = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
 pdcUser.displayer.pdc = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
