Removing hazardous "server.http.port" parameter default value.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3317 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
@@ -39,7 +39,7 @@ tempPath = @TempDir@
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
 redirectAppInMaintenance = /admin/jsp/appInMaintenance.jsp
-server.http.port=8000
+server.http.port=
 server.ssl=false
 
 RepositoryTypeTemp = Temp
