closing feature #409 Add ArrayPane export feature
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3331 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -522,6 +522,10 @@
     <servlet-name>ThumbnailRequestRouter</servlet-name>
     <servlet-class>com.silverpeas.thumbnail.servlets.ThumbnailRequestRouter</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>ExportServlet</servlet-name>
+    <servlet-class>com.silverpeas.export.servlets.ExportServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>AuthenticationServlet</servlet-name>
     <url-pattern>/AuthenticationServlet</url-pattern>
@@ -901,6 +905,11 @@
     <servlet-name>ThumbnailRequestRouter</servlet-name>
     <url-pattern>/Thumbnail/*</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ExportServlet</servlet-name>
+    <url-pattern>/Export/*</url-pattern>
+  </servlet-mapping>
+  
   <jsp-config>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
