--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
@@ -23,140 +23,138 @@
 #
 # JNDI for JBOSS
 
-CLIPBOARD_EJBHOME		= ejb/ClipboardBm
-NODEBM_EJBHOME			= ejb/NodeBm
-NODE_EJBHOME			= ejb/Node
-COMMENT_EJBHOME			= ejb/Comment
-KMELIABM_EJBHOME		= ejb/KmeliaBm
-YELLOWPAGESBM_EJBHOME		= ejb/YellowpagesBm
-PUBLICATION_EJBHOME		= ejb/Publication
-PUBLICATIONBM_EJBHOME		= ejb/PublicationBm
-CONTACT_EJBHOME			= ejb/Contact
-CONTACTBM_EJBHOME		= ejb/ContactBm
-FAVORITBM_EJBHOME		= ejb/FavoritBm
-SUBSCRIBEBM_EJBHOME		= ejb/SubscribeBm
-STATISTICBM_EJBHOME		= ejb/StatisticBm
-READINGCONTROLBM_EJBHOME	= ejb/ReadingControlBm
-NEWSBM_EJBHOME			= ejb/NewsBm
-QUICKINFOBM_EJBHOME		= ejb/QuickInfoBm
-ALMANACHBM_EJBHOME		= ejb/AlmanachBm
-AGENDABM_EJBHOME		= ejb/AgendaBm
-CALENDARBM_EJBHOME		= ejb/CalendarBm
-POLLBM_EJBHOME			= ejb/PollingStationBm
-QUESTIONBM_EJBHOME		= ejb/QuestionBm
-QUESTIONRESULTBM_EJBHOME	= ejb/QuestionResultBm
-ANSWERBM_EJBHOME		= ejb/AnswerBm
-TOOLBOXBM_EJBHOME		= ejb/ToolBoxBm
-SURVEYBM_EJBHOME		= ejb/SurveyBm
-PERSONALIZATIONBM_EJBHOME	= ejb/PersonalizationBm
-QUIZZBM_EJBHOME			= ejb/QuizzBm
-SCOREBM_EJBHOME			= ejb/ScoreBm
-QUESTIONCONTAINERBM_EJBHOME	= ejb/QuestionContainerBm
-ATTACHMENT_EJBHOME		= ejb/Attachment
-VERSIONING_EJBHOME		= ejb/Versioning
-TASKMBM_EJBHOME			= ejb/TaskmBm
-COORDINATESBM_EJBHOME		= ejb/CoordinatesBm
-CONNECTEURJDBC_EJBHOME		= ejb/ConnecteurJDBCBm
-SILVERSTATISTICS_EJBHOME	= ejb/SilverStatistics
-INTEREST_CENTER_EJBHOME		= ejb/InterestCenter
-PDC_SUBSCRIPTION_EJBHOME	= ejb/pdcSubscription
-FORUMSBM_EJBHOME		= ejb/ForumsBM
-INDEXBM_EJBHOME			= ejb/IndexEngineBm
-SEARCHBM_EJBHOME		= ejb/SearchEngineBm
-BOOKMARKBM_EJBHOME		= ejb/BookmarkBm
-WEBSITESBM_EJBHOME		= ejb/webSitesBm
-FORMDESIGNERBM_EJBHOME		= ejb/FormDesignerBm
-FORMMANAGERBM_EJBHOME		= ejb/FormManagerBm
-KMAXBM_EJBHOME			= ejb/KmaxBm
-ADBM_EJBHOME			= ejb/AdBm
-AD_EJBHOME			= ejb/Ad
-DOCUMENTBM_EJBHOME		= ejb/DocumentBm
-BUSREMOTEACCESSBM_EJBHOME	= ejb/BusRemoteAccessBm
-ADMINBM_EJBHOME			= ejb/AdminBm
-PDCBM_EJBHOME			= ejb/PdcBm
-MYDB_EJBHOME			= ejb/MyDBBm
-TAGCLOUDBM_EJBHOME		= ejb/TagCloudBm
-NOTATIONBM_EJBHOME 		= ejb/NotationBm
+CLIPBOARD_EJBHOME = ejb/ClipboardBm
+NODEBM_EJBHOME = ejb/NodeBm
+NODE_EJBHOME = ejb/Node
+COMMENT_EJBHOME = ejb/Comment
+KMELIABM_EJBHOME = ejb/KmeliaBm
+YELLOWPAGESBM_EJBHOME = ejb/YellowpagesBm
+PUBLICATION_EJBHOME = ejb/Publication
+PUBLICATIONBM_EJBHOME = ejb/PublicationBm
+CONTACT_EJBHOME = ejb/Contact
+CONTACTBM_EJBHOME = ejb/ContactBm
+FAVORITBM_EJBHOME = ejb/FavoritBm
+SUBSCRIBEBM_EJBHOME = ejb/SubscribeBm
+STATISTICBM_EJBHOME = ejb/StatisticBm
+READINGCONTROLBM_EJBHOME = ejb/ReadingControlBm
+NEWSBM_EJBHOME = ejb/NewsBm
+QUICKINFOBM_EJBHOME = ejb/QuickInfoBm
+ALMANACHBM_EJBHOME = ejb/AlmanachBm
+AGENDABM_EJBHOME = ejb/AgendaBm
+CALENDARBM_EJBHOME = ejb/CalendarBm
+POLLBM_EJBHOME = ejb/PollingStationBm
+QUESTIONBM_EJBHOME = ejb/QuestionBm
+QUESTIONRESULTBM_EJBHOME = ejb/QuestionResultBm
+ANSWERBM_EJBHOME = ejb/AnswerBm
+TOOLBOXBM_EJBHOME = ejb/ToolBoxBm
+SURVEYBM_EJBHOME = ejb/SurveyBm
+PERSONALIZATIONBM_EJBHOME = ejb/PersonalizationBm
+QUIZZBM_EJBHOME = ejb/QuizzBm
+SCOREBM_EJBHOME = ejb/ScoreBm
+QUESTIONCONTAINERBM_EJBHOME = ejb/QuestionContainerBm
+ATTACHMENT_EJBHOME = ejb/Attachment
+VERSIONING_EJBHOME = ejb/Versioning
+TASKMBM_EJBHOME = ejb/TaskmBm
+COORDINATESBM_EJBHOME = ejb/CoordinatesBm
+CONNECTEURJDBC_EJBHOME = ejb/ConnecteurJDBCBm
+SILVERSTATISTICS_EJBHOME = ejb/SilverStatistics
+INTEREST_CENTER_EJBHOME = ejb/InterestCenter
+PDC_SUBSCRIPTION_EJBHOME = ejb/pdcSubscription
+FORUMSBM_EJBHOME = ejb/ForumsBM
+INDEXBM_EJBHOME = ejb/IndexEngineBm
+SEARCHBM_EJBHOME = ejb/SearchEngineBm
+BOOKMARKBM_EJBHOME = ejb/BookmarkBm
+WEBSITESBM_EJBHOME = ejb/webSitesBm
+FORMDESIGNERBM_EJBHOME = ejb/FormDesignerBm
+FORMMANAGERBM_EJBHOME = ejb/FormManagerBm
+KMAXBM_EJBHOME = ejb/KmaxBm
+ADBM_EJBHOME = ejb/AdBm
+AD_EJBHOME = ejb/Ad
+DOCUMENTBM_EJBHOME = ejb/DocumentBm
+BUSREMOTEACCESSBM_EJBHOME = ejb/BusRemoteAccessBm
+ADMINBM_EJBHOME = ejb/AdminBm
+PDCBM_EJBHOME = ejb/PdcBm
+MYDB_EJBHOME = ejb/MyDBBm
+TAGCLOUDBM_EJBHOME = ejb/TagCloudBm
+NOTATIONBM_EJBHOME = ejb/NotationBm
 
-SILVERPEAS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PUBLICATION_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-INTEREST_CENTER_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-VERSIONING_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-CONTACT_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-NODE_DATASOURCE			= java:comp/env/jdbc/Silverpeas
-FAVORIT_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-SUBSCRIBE_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-STATISTIC_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-CALENDAR_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-ALMANACH_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-FORUMS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-QUESTION_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-ANSWER_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-SURVEY_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PERSONALIZATION_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-SCORE_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-QUESTIONCONTAINER_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-BOOKMARK_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-WEBSITES_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-TASKM_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-FORMDESIGNER_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PDC_SUBSCRIPTION_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-PUZZLE_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-SILVERSTATISTICS_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-CRM_DATASOURCE			= java:comp/env/jdbc/Silverpeas
-THESAURUS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PDC_BUSIHM_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-FILEBOXPLUS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-QUESTIONREPLY_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-WHITEPAGES_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PERSISTENCE_EJB_DATASOURCE	= java:comp/env/jdbc/Silverpeas
-MAIL_SESSION			= java:comp/env/MailSession
-USE_CATALOG_EJB			= java:comp/env/useCatalogEJB
-SECURITY_ADAPTER_CLASSNAME	= java:comp/env/securityAdapterClassName
-SEND_CONFIRMATION_MAIL		= java:comp/env/sendConfirmationMail
+SILVERPEAS_DATASOURCE = Silverpeas
+PUBLICATION_DATASOURCE = Silverpeas
+INTEREST_CENTER_DATASOURCE = Silverpeas
+VERSIONING_DATASOURCE = Silverpeas
+CONTACT_DATASOURCE = Silverpeas
+NODE_DATASOURCE = Silverpeas
+FAVORIT_DATASOURCE = Silverpeas
+SUBSCRIBE_DATASOURCE = Silverpeas
+STATISTIC_DATASOURCE = Silverpeas
+CALENDAR_DATASOURCE = Silverpeas
+ALMANACH_DATASOURCE = Silverpeas
+FORUMS_DATASOURCE = Silverpeas
+QUESTION_DATASOURCE = Silverpeas
+ANSWER_DATASOURCE = Silverpeas
+SURVEY_DATASOURCE = Silverpeas
+PERSONALIZATION_DATASOURCE = Silverpeas
+SCORE_DATASOURCE = Silverpeas
+QUESTIONCONTAINER_DATASOURCE = Silverpeas
+BOOKMARK_DATASOURCE = Silverpeas
+WEBSITES_DATASOURCE = Silverpeas
+TASKM_DATASOURCE = Silverpeas
+FORMDESIGNER_DATASOURCE = Silverpeas
+PDC_SUBSCRIPTION_DATASOURCE = Silverpeas
+PUZZLE_DATASOURCE = Silverpeas
+SILVERSTATISTICS_DATASOURCE = Silverpeas
+CRM_DATASOURCE = Silverpeas
+THESAURUS_DATASOURCE = Silverpeas
+PDC_BUSIHM_DATASOURCE = Silverpeas
+FILEBOXPLUS_DATASOURCE = Silverpeas
+QUESTIONREPLY_DATASOURCE = Silverpeas
+WHITEPAGES_DATASOURCE = Silverpeas
+PERSISTENCE_EJB_DATASOURCE = Silverpeas
+MAIL_SESSION = java:comp/env/MailSession
+USE_CATALOG_EJB = java:comp/env/useCatalogEJB
+SECURITY_ADAPTER_CLASSNAME = java:comp/env/securityAdapterClassName
+SEND_CONFIRMATION_MAIL = java:comp/env/sendConfirmationMail
 
-ATTACHMENT_DATASOURCE		= Silverpeas
-CONTAINERMANAGER_DATASOURCE	= Silverpeas
-CONTENTMANAGER_DATASOURCE	= Silverpeas
-CLASSIFYENGINE_DATASOURCE	= Silverpeas
-PDC_DATASOURCE			= Silverpeas
-ADMIN_DATASOURCE		= Silverpeas
-FORMTEMPLATE_DATASOURCE		= Silverpeas
-WORKFLOW_DATASOURCE		= Silverpeas
-CHAT_DATASOURCE			= Silverpeas
-INFOLETTER_DATASOURCE		= Silverpeas
-OUTLOOK_DATASOURCE		= Silverpeas
-GENERATOR_DATASOURCE		= Silverpeas
-FORMDESIGNER_DB_DATASOURCE	= Silverpeas
-DATABASE_DATASOURCE		= Silverpeas
-PERSISTENCE_DB_DATASOURCE	= Silverpeas
-WIKI_DATASOURCE			= Silverpeas
+ATTACHMENT_DATASOURCE = Silverpeas
+CONTAINERMANAGER_DATASOURCE = Silverpeas
+CONTENTMANAGER_DATASOURCE = Silverpeas
+CLASSIFYENGINE_DATASOURCE = Silverpeas
+PDC_DATASOURCE = Silverpeas
+ADMIN_DATASOURCE = Silverpeas
+FORMTEMPLATE_DATASOURCE = Silverpeas
+WORKFLOW_DATASOURCE = Silverpeas
+CHAT_DATASOURCE = Silverpeas
+INFOLETTER_DATASOURCE = Silverpeas
+OUTLOOK_DATASOURCE = Silverpeas
+GENERATOR_DATASOURCE = Silverpeas
+FORMDESIGNER_DB_DATASOURCE = Silverpeas
+DATABASE_DATASOURCE = Silverpeas
+PERSISTENCE_DB_DATASOURCE = Silverpeas
+WIKI_DATASOURCE = Silverpeas
 
-JMS_HEADER_CHANNEL		= CHANNEL
+JMS_HEADER_CHANNEL = CHANNEL
 
-SILVERSTATISTICS_JMS_QUEUE	= queue/statisticsQueue
-JMS_QUEUE			= queue/notificationsQueue
+SILVERSTATISTICS_JMS_QUEUE = queue/statisticsQueue
+JMS_QUEUE = queue/notificationsQueue
 
-SILVERSTATISTICS_JMS_FACTORY	= java:/XAConnectionFactory
-JMS_FACTORY			= java:/XAConnectionFactory
+SILVERSTATISTICS_JMS_FACTORY = java:/XAConnectionFactory
+JMS_FACTORY = java:/XAConnectionFactory
 
 #
 # exemple pour une config jboss
 #
-#      java.naming.factory.initial=org.jnp.interfaces.NamingContextFactory
-#      java.naming.provider.url=Pc00068:1099
-#      java.naming.factory.url.pkgs=org.jboss.naming
+#      java.naming.factory.initial =org.jnp.interfaces.NamingContextFactory
+#      java.naming.provider.url =Pc00068:1099
+#      java.naming.factory.url.pkgs =org.jboss.naming
 
 
 # 
 # exemple pour une configuration du serveur jndi de bea
 #
-#     java.naming.factory.initial=weblogic.jndi.WLInitialContextFactory
-#     java.naming.provider.url=t3://Pc00022:7001
+#     java.naming.factory.initial =weblogic.jndi.WLInitialContextFactory
+#     java.naming.provider.url =t3://Pc00022:7001
 #
 
 
 # withHomeFetcher, for HomeFetcher optimization (Yes, or No)
-withHomeFetcher=Yes
-
-
+withHomeFetcher =Yes
