Fixing missing points for refactoring
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3412 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/searchEngine/searchEngineSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/searchEngine/searchEngineSettings.properties
@@ -29,5 +29,5 @@ maxResults = 10000
 # the field name must be separated by a comma. 
 sorting.formXML.fields = 
 
-defaultSort = com.stratelia.silverpeas.pdcPeas.DefaultSortResults
-xmlFormSort = com.stratelia.silverpeas.pdcPeas.SortResultsXFormWithoutPub
+defaultSort = com.stratelia.silverpeas.pdcPeas.control.DefaultSortResults
+xmlFormSort = com.stratelia.silverpeas.pdcPeas.control.SortResultsXFormWithoutPub
