--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
   </description>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.5</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.5</developerConnection>
-    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/tags/core-5.5</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
+    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/trunk/</url>
   </scm>
 
   <repositories>
@@ -63,7 +63,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.5</version>
+  <version>5.6-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
