--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -32,6 +32,7 @@ text.displayer.radio = com.silverpeas.form.fieldDisplayer.RadioButtonDisplayer
 text.displayer.checkbox = com.silverpeas.form.fieldDisplayer.CheckBoxDisplayer
 text.displayer.url = com.silverpeas.form.fieldDisplayer.UrlFieldDisplayer
 text.displayer.time = com.silverpeas.form.fieldDisplayer.TimeFieldDisplayer
+text.displayer.pdcPositions = com.silverpeas.form.fieldDisplayer.PdcPositionsFieldDisplayer
 
 date.implementation = com.silverpeas.form.fieldType.DateFieldImpl
 date.displayer = com.silverpeas.form.fieldDisplayer.DateFieldDisplayer
