--- a/lib-core/src/test/resources/com/silverpeas/form/settings/types.properties
+++ b/lib-core/src/test/resources/com/silverpeas/form/settings/types.properties
@@ -32,6 +32,7 @@ text.displayer.radio = com.silverpeas.form.fieldDisplayer.RadioButtonDisplayer
 text.displayer.checkbox = com.silverpeas.form.fieldDisplayer.CheckBoxDisplayer
 text.displayer.url = com.silverpeas.form.fieldDisplayer.UrlFieldDisplayer
 text.displayer.time = com.silverpeas.form.fieldDisplayer.TimeFieldDisplayer
+text.displayer.pdcPositions = com.silverpeas.form.fieldDisplayer.PdcPositionsFieldDisplayer
 date.implementation = com.silverpeas.form.fieldType.DateFieldImpl
 date.displayer = com.silverpeas.form.fieldDisplayer.DateFieldDisplayer
 date.displayer.date = com.silverpeas.form.fieldDisplayer.DateFieldDisplayer
@@ -40,6 +41,9 @@ user.implementation = com.silverpeas.form.fieldType.UserField
 user.displayer = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
 user.displayer.user = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
 user.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+multipleUser.implementation = com.silverpeas.form.fieldType.MultipleUserField
+multipleUser.displayer = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
+multipleUser.displayer.multipleUser = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
 pdcUser.implementation = com.silverpeas.form.fieldType.PdcUserField
 pdcUser.displayer = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
 pdcUser.displayer.pdc = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
