Feature #1442. In perspective to the iCal export in almanach, extracts the code specific to the agenda web core component and puts it into a more mutualisable object dedicated to the iCal export. To accomplish this way, an object layer is added to handle calendar events, recurrences and so on so that mutualized and business operations can be done without any dependency upon specific codes within the Silverpeas components.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3459 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -84,10 +84,10 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
-	<dependency>
-	  <groupId>commons-beanutils</groupId>
+    <dependency>
+      <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
-	</dependency>
+    </dependency>
     <dependency>
       <groupId>net.sourceforge</groupId>
       <artifactId>cryptolib</artifactId>
@@ -153,6 +153,10 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.castor</groupId>
