--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jcr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jcr.properties
@@ -34,6 +34,7 @@ jcr.home.dir.url=file:///c:/tmp/jackrabbit
 #Jackrabbit Home Dir
 jcr.authentication.realm=Silverpeas
 
+schema=postgres
 
 #RMI Configuration
 jcr.rmi.host=localhost
