Adding missing key
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3473 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jcr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jcr.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-#Nom du workspace (configuré dans repository.xml)
+#Nom du workspace (configur\u00e9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
@@ -39,3 +39,5 @@ jcr.authentication.realm=Silverpeas
 jcr.rmi.host=localhost
 jcr.rmi.port=1199
 jcr.rmi.name=jackrabbit.repository
+
+schema=postgres
