--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -159,6 +159,10 @@
       <artifactId>cdi-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.castor</groupId>
       <artifactId>castor-jdo</artifactId>
     </dependency>
@@ -236,6 +240,10 @@
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
     </dependency>
   </dependencies>
 
