--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,24 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-project-info-reports-plugin</artifactId>
-              <version>2.2</version>
+              <version>2.3.1</version>  
+              <reportSets>
+                <reportSet>
+                  <reports>
+                    <report>cim</report>
+                    <report>dependencies</report>
+                    <report>dependency-convergence</report>
+                    <report>dependency-management</report>
+                    <report>distribution-management</report>
+                    <report>index</report>
+                    <report>issue-tracking</report>
+                    <report>modules</report>
+                    <report>project-team</report>    
+                    <report>license</report>
+                    <report>scm</report>
+                  </reports>
+                </reportSet>
+              </reportSets>
               <configuration>
                 <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                 <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
