Two important updates: - The ExportDescriptor filePath is now replaced by a Writer object, so that Silverpeas resources are exported through a passed writer from which the way of the export process can be customized to statisfy specific export requirements (export through a web service, export into a file, and so on).
- Silverpeas Core now supports REST services with Jersey. Theses services are dynamically managed by Spring and that then provide an access to them for the jersey container.

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -155,6 +155,10 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-spring</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
     </dependency>
