Feature #1502. - Add in the export API the interface for importers of resource. - Create an exporter and an importer of comments in the JSON format. The implementation of theses exporter and importer is built upon the Jackson JSON processor. - Refine the API of the SessionInfo in order to remove any access to its public field: public fields are now private and accessors to them are added. The code using it is also updated. - Add a web service to handle requests on the comments : it is the first step in the javascript-handling of comments in the web site as an autonome and dedicated component.

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -66,11 +66,11 @@
       <groupId>com.sun.portal.portletcontainer</groupId>
       <artifactId>java-portlet-container</artifactId>
     </dependency>
-	<dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
-	<dependency>
+    <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
     </dependency>
@@ -156,9 +156,19 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <artifactId>comment</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.metaparadigm</groupId>
       <artifactId>json-rpc</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-lgpl</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
