Feature #1502. refine the ExportDescriptor and ImportDescriptor interface. Update the caller of them. Ends the getting of a comment in the web service on the comments.

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -176,6 +176,18 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.jersey.jersey-test-framework</groupId>
+      <artifactId>jersey-test-framework-grizzly</artifactId>
+      <version>1.6-ea02</version>
+      <scope>test</scope>
+    </dependency>
+<!--    <dependency>
+      <groupId>com.sun.jersey.jersey-test-framework</groupId>
+      <artifactId>jersey-test-framework-external</artifactId>
+      <version>1.6-ea02</version>
+      <scope>test</scope>
+    </dependency>-->
   </dependencies>
 
   <build>
