--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,13 @@
     images gallery and its own Enterprise Content Management tool.
   </description>
 
+
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.5</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/core/tags/core-5.5</developerConnection>
-    <url>http://www.silverpeas.org/websvn/repos/Silverpeas/list/core/tags/core-5.5</url>
+    <connection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</connection>
+    <developerConnection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</developerConnection>
+    <url>http://gitub.com/Silverpeas/Silverpeas-Core.git</url>
   </scm>
+
 
   <repositories>
     <repository>
@@ -63,7 +65,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.5</version>
+  <version>5.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
