--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>core</artifactId>
     <version>5.6-SNAPSHOT</version>
   </parent>
-	
+
   <groupId>com.silverpeas.core</groupId>
   <artifactId>ejb-core</artifactId>
   <packaging>pom</packaging>
@@ -19,11 +19,19 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>jms-api</artifactId>
     </dependency>
   </dependencies>
-  
+
   <modules>
     <module>admin</module>
     <module>authentication</module>
@@ -48,5 +56,5 @@
     <module>questioncontainer</module>
 	<module>importExport</module>
   </modules>
-  
+
 </project>
