--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -23,8 +23,12 @@
       <artifactId>servlet-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
@@ -144,11 +148,6 @@
     <dependency>
       <artifactId>container</artifactId>
       <groupId>com.sun.portal.portletcontainer</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.jersey.contribs</groupId>
-      <artifactId>jersey-spring</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
