--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -200,6 +200,17 @@
       <artifactId>jersey-test-framework-grizzly</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-apache-client</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.riffpie.common.testing</groupId>
+      <artifactId>jersey-test-support</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
