Feature #1502 The different operations (creation, getting, and update) of the web service on the the comments is now terminated and well tested (unit tests)

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -210,7 +210,11 @@
       <artifactId>jersey-test-support</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-json</artifactId>
+      <version>1.6-ea02</version>
+    </dependency>
   </dependencies>
 
   <build>
