take into account of the new dependency jersey-json defined in the parent POM

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -167,6 +167,10 @@
       <artifactId>jersey-spring</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-json</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
     </dependency>
