--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -185,6 +185,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-json</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-spring</artifactId>
       <scope>provided</scope>
@@ -209,11 +214,6 @@
       <groupId>com.riffpie.common.testing</groupId>
       <artifactId>jersey-test-support</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-json</artifactId>
-      <version>1.6-ea02</version>
     </dependency>
   </dependencies>
 
