Better default configuration

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
@@ -29,4 +29,4 @@ SMTPServer = smtp-msa.orange.fr
 SMTPDebug = false
 SMTPSecure = false
 NotificationAddress = silverpeas@silverpeas.com
-AuthorizedDomains=silverpeas.net,silverpeas.org,silverpeas.com,oeovo.com,oosphere.com,oosphere.ch
+AuthorizedDomains=
