--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.5.2</version>
+  <version>5.5.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
