second integration step of feature #1493 Relationship management is done...

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -482,8 +482,8 @@
     <servlet-class>com.silverpeas.directory.servlets.ImageDisplay</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>InvitationServlet</servlet-name>
-    <servlet-class>com.silverpeas.socialNetwork.invitation.servlets.InvitationRequestRouter</servlet-class>
+    <servlet-name>InvitationJSONServlet</servlet-name>
+    <servlet-class>com.silverpeas.socialNetwork.invitation.servlets.InvitationJSONServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>RelationShipServlet</servlet-name>
@@ -869,8 +869,8 @@
     <url-pattern>/display/avatar/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>InvitationServlet</servlet-name>
-    <url-pattern>/Rinvitation/*</url-pattern>
+    <servlet-name>InvitationJSONServlet</servlet-name>
+    <url-pattern>/InvitationJSON</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>RelationShipServlet</servlet-name>
@@ -890,7 +890,7 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>MyContactProfilRequestRouter</servlet-name>
-    <url-pattern>/RmyContactProfil/*</url-pattern>
+    <url-pattern>/RContactProfile/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>MyContactJSONServlet</servlet-name>
